--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-selenium==4.1.0
+selenium>=4.0.0,<5.0.0
+webdriver-manager>=3.8.0
 appium-python-client==2.0.0
-pillow==8.4.0
+pillow>=9.0.0
 apscheduler==3.8.0
 pytesseract==0.3.8
